--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,14 @@
 {
-	"name": "Browser calculator",
- 	"version": "0.0.2",
- 	"description": "calculator for your browser",
- 	"manifest_version": 2,
-	"browser_action": {
-		"default_popup": "popup.html",
-		"default_icon" : "images/logo.png"
+  "name": "IPO calculator",
+  "version": "1.0",
+  "description": "Number of shares to apply in IPO Calculator for your browser",
+  "manifest_version": 3,
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "images/logo.png",
+      "48": "images/logo.png",
+      "128": "images/logo.png"
     }
+  }
 }
