--- a/manifest.json
+++ b/manifest.json
@@ -10,5 +10,10 @@
       "48": "images/logo.png",
       "128": "images/logo.png"
     }
+  },
+  "icons": {
+    "16": "images/logo.png",
+    "48": "images/logo.png",
+    "128": "images/logo.png"
   }
 }
